--- a/open/build.gradle
+++ b/open/build.gradle
@@ -18,5 +18,7 @@ android {
 }
 
 dependencies {
-compile 'com.android.support:support-annotations:25.3.0'
+    compile 'com.android.support:support-annotations:25.3.0'
+
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
