--- a/open/build.gradle
+++ b/open/build.gradle
@@ -22,4 +22,6 @@ dependencies {
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
+    compile 'com.android.support:recyclerview-v7:' + project.ext.supportLibraryVersion
+    compile 'com.android.support:cardview-v7:' + project.ext.supportLibraryVersion
 }
