--- a/open-source/src/main/AndroidManifest.xml
+++ b/open-source/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ss.aris.open" />
+    package="com.aris.open">
+
+
+</manifest>
