--- a/open-source/build.gradle
+++ b/open-source/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     compile 'com.android.support:support-annotations:25.3.0'
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
+//    compile 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
     compile 'com.android.support:recyclerview-v7:' + project.ext.supportLibraryVersion
     compile 'com.android.support:cardview-v7:' + project.ext.supportLibraryVersion
 }
